# DxChecker

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
cmakescripts/: CodeSignWindows.cmake
libs/: CMakeLists.txt
src/: DXUtils.cpp  DXUtils.h  FSUtils.cpp  FSUtils.h  GPUDescriptor.h  main.cpp
